fix(tag): wrap text to a newline if to long

--- a/packages/core/src/components/bal-tag/bal-tag.sass
+++ b/packages/core/src/components/bal-tag/bal-tag.sass
@@ -63,6 +63,7 @@
     font-weight: var(--bal-font-weight-bold)
     font-size: var(--bal-text-size-normal) !important
     hyphens: auto
+    text-wrap: auto
     display: inline-flex
     align-items: center
     gap: .25rem
